--- a/waybar/style.css
+++ b/waybar/style.css
@@ -77,8 +77,9 @@ button:hover {
 #mode,
 #scratchpad,
 #custom-power,
-#custom-notifications
-#custom-weather
+#custom-notifications,
+#custom-weather,
+#custom-WSG,
 #window,
 #workspaces {
     margin: 0 4px;
@@ -168,6 +169,12 @@ button:hover {
     color: #000000;
     background-color: #bb9af7;
     min-width: 20px;
+}
+
+#custom-WSG {
+    background-color: #bb9af7;
+    color: #000000;
+    padding: 0 5px
 }
 
 #battery.charging, #battery.plugged {
