--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,13 +1,13 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    border-radius: 6px;
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    border-radius: 20px;
+    font-family: FontAwesome;
     font-size: 13px;
 }
 
 window#waybar {
     background-color: rgba(43, 48, 59, 0);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
@@ -42,18 +42,20 @@ button:hover {
 
 #workspaces button {
     padding: 0 5px;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.4);
     color: #000000;
+    border-radius: 20px
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 -3px rgba(0, 0, 0, 0.0)
 }
 
 #workspaces button.focused {
-    background-color: #2ac3de;
-    box-shadow: inset 0 -3px #2ac3de;
     color: #000000;
+    background: rgb(42,195,222);
+    background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 75%);
 }
 
 #workspaces button.urgent {
@@ -61,8 +63,10 @@ button:hover {
 }
 
 #mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+    color: #000000;
+    padding: 0 5px;
+    background: rgb(247,118,142);
+    background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
 }
 
 #clock,
@@ -80,6 +84,7 @@ button:hover {
 #custom-notifications,
 #custom-weather,
 #custom-network_traffic
+#custom-clock
 #window,
 #workspaces {
     margin: 0 4px;
@@ -95,10 +100,12 @@ button:hover {
     margin-right: 0;
 }
 
-#clock {
-    background-color: #2ac3de;
+#custom-clock {
+    /* background-color: #2ac3de; */
     color: #000000;
-    padding: 0 5px
+    padding: 0 5px;
+    background: rgb(158,206,106);
+    background: linear-gradient(135deg, rgba(158,206,106,1) 0%, rgba(42,195,222,1) 100%);
 }
 
 #battery {
@@ -112,6 +119,8 @@ button:hover {
     background-color: #f7768e;
     padding: 0 5px;
     margin: 0 5px;
+    background: rgb(247,118,142);
+    background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
 }
 
 #custom-weather.sunnyDay {
@@ -119,6 +128,8 @@ button:hover {
     background-color: #ff9e64;
     padding: 0 5px;
     margin: 0 5px;
+    background: rgb(255,158,100);
+    background: linear-gradient(135deg, rgba(255,158,100,1) 0%, rgba(247,118,142,1) 100%);
 }
 
 #custom-weather.clearNight {
@@ -126,6 +137,8 @@ button:hover {
     background-color: #bb9af7;
     padding: 0 5px;
     margin: 0 5px;
+    background: rgb(42,195,222);
+    background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 50%);
 }
 
 #custom-weather.cloudyFoggyDay, #custom-weather.cloudyFoggyNight {
@@ -133,6 +146,8 @@ button:hover {
     background-color: #c0caf5;
     padding: 0 5px;
     margin: 0 5px;
+    background: rgb(125,207,255);
+    background: linear-gradient(135deg, rgba(125,207,255,1) 0%, rgba(180,249,248,1) 100%);
 }
 
 #custom-weather.rainyDay, #custom-weather.rainyNight {
@@ -140,6 +155,8 @@ button:hover {
     background-color: #2ac3de;
     padding: 0 5px;
     margin: 0 5px;
+    background: rgb(42,195,222);
+    background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 100%);
 }
 
 #custom-weather.showyIcyDay, #custom-weather.snowyIcyNight {
@@ -147,6 +164,8 @@ button:hover {
     background-color: #b4f9f8;
     padding: 0 5px;
     margin: 0 5px;
+    background: rgb(42,195,222);
+    background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(65,72,104,1) 100%);
 }
 
 #custom-weather.default {
@@ -154,13 +173,17 @@ button:hover {
     background-color: #9ece6a;
     padding: 0 5px;
     margin: 0 5px;
+    background: rgb(158,206,106);
+    background: linear-gradient(135deg, rgba(158,206,106,1) 0%, rgba(42,195,222,1) 100%);
 }
 
 #custom-power {
     background-color: #9ece6a;
     color: #000000;
     /*margin: 0 5px;*/
-    padding: 0 5px
+    padding: 0 5px;
+    background: rgb(158,206,106);
+    background: linear-gradient(135deg, rgba(158,206,106,1) 0%, rgba(42,195,222,1) 100%);
 
 }
 
@@ -169,6 +192,8 @@ button:hover {
     color: #000000;
     background-color: #bb9af7;
     min-width: 20px;
+    background: rgb(42,195,222);
+    background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 100%);
 }
 
 #battery.charging, #battery.plugged {
@@ -202,12 +227,16 @@ label:focus {
     background-color: #e0af68;
     color: #000000;
     padding: 0 5px;
+    background: rgb(42,195,222);
+    background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 100%); 
 }
 
 #memory {
     background-color: #2ac3de;
     color: #000000;
     padding: 0 5px;
+    background: rgb(158,206,106);
+    background: linear-gradient(135deg, rgba(158,206,106,1) 0%, rgba(42,195,222,1) 100%);
 }
 
 #backlight {
@@ -220,6 +249,8 @@ label:focus {
     background-color: #bb9af7;
     color: #000000;
     padding: 0 2px;
+    background: rgb(187,154,247);
+    background: linear-gradient(135deg, rgba(187,154,247,1) 0%, rgba(115,218,202,1) 100%);
 }
 
 #network.disconnected {
@@ -231,6 +262,8 @@ label:focus {
     background-color: #2ac3de;
     color: #000000;
     padding: 0 5px;
+    background: rgb(247,118,142);
+    background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
 }
 
 #pulseaudio.muted {
@@ -243,6 +276,8 @@ label:focus {
     background-color: #73daca;
     color: #000000;
     padding: 0 5px;
+    background: rgb(247,118,142);
+    background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
 }
 
 #temperature.critical {
@@ -253,7 +288,9 @@ label:focus {
 #tray {
     background-color: #2980b9;
     color: #000000;
-    padding: 0 5px
+    padding: 0 5px;
+    background: rgb(247,118,142);
+    background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
 }
 
 #tray > .passive {
@@ -270,6 +307,8 @@ label:focus {
     color: #000000;
     min-width: 20px;
     padding: 0 5px;
+    background: rgb(42,195,222);
+    background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 100%);
 }
 
 #keyboard-state {
