--- a/waybar/style.css
+++ b/waybar/style.css
@@ -22,7 +22,7 @@ window#waybar.termite {
 }
 
 window#waybar.chromium {
-    background-color: #000000;
+    background-color: #24283b;
     border: none;
 }
 
@@ -43,9 +43,11 @@ button:hover {
 #workspaces button {
     margin: 0 2px;
     padding: 0 5px;
-    background-color: rgba(0, 0, 0, 0.4);
-    color: #000000;
-    border-radius: 20px
+    color: #24283b;
+    border-radius: 20px;
+    background: rgb(247,118,142);
+    background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
+
 }
 
 #workspaces button:hover {
@@ -54,7 +56,7 @@ button:hover {
 }
 
 #workspaces button.focused {
-    color: #000000;
+    color: #24283b;
     background: rgb(42,195,222);
     background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 75%);
 }
@@ -64,7 +66,7 @@ button:hover {
 }
 
 #mode {
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
     background: rgb(247,118,142);
     background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
@@ -83,10 +85,11 @@ button:hover {
 #scratchpad,
 #custom-notifications,
 #custom-weather,
-#custom-network_traffic,
-#custom-clock,
+#clock,
 #custom-media,
 #window,
+#custom-icon,
+
 #workspaces {
     margin: 0 2px;
 }
@@ -102,29 +105,41 @@ button:hover {
 }
 
 
-#custom-clock {
+#clock {
     /* background-color: #2ac3de; */
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
     background: rgb(158,206,106);
     background: linear-gradient(135deg, rgba(158,206,106,1) 0%, rgba(42,195,222,1) 100%);
 }
 
+#custom-icon {
+    color: #24283b;
+    padding: 0 5px;
+    background: rgb(42,195,222);
+    background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 100%); 
+}
+
 #custom-media {
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
     background: rgb(42,195,222);
     background: linear-gradient(135deg, rgba(42,195,222,1) 35%, rgba(187,154,247,1) 70%);
 }
 
+#custom-media.Empty {
+    background: rgba(0, 0, 0, 0);
+    color: rgba(0, 0, 0, 0);
+}
+
 #battery {
     background-color: #f7768e;
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
 }
 
 #custom-weather.severe {
-    color: #000000;
+    color: #24283b;
     background-color: #f7768e;
     padding: 0 5px;
     margin: 0 2px;
@@ -133,7 +148,7 @@ button:hover {
 }
 
 #custom-weather.sunnyDay {
-    color: #000000;
+    color: #24283b;
     background-color: #ff9e64;
     padding: 0 5px;
     margin: 0 2px;
@@ -142,7 +157,7 @@ button:hover {
 }
 
 #custom-weather.clearNight {
-    color: #000000;
+    color: #24283b;
     background-color: #bb9af7;
     padding: 0 5px;
     margin: 0 2px;
@@ -151,7 +166,7 @@ button:hover {
 }
 
 #custom-weather.cloudyFoggyDay, #custom-weather.cloudyFoggyNight {
-    color: #000000;
+    color: #24283b;
     background-color: #c0caf5;
     padding: 0 5px;
     margin: 0 2px;
@@ -160,7 +175,7 @@ button:hover {
 }
 
 #custom-weather.rainyDay, #custom-weather.rainyNight {
-    color: #000000;
+    color: #24283b;
     background-color: #2ac3de;
     padding: 0 5px;
     margin: 0 2px;
@@ -169,7 +184,7 @@ button:hover {
 }
 
 #custom-weather.showyIcyDay, #custom-weather.snowyIcyNight {
-    color: #000000;
+    color: #24283b;
     background-color: #b4f9f8;
     padding: 0 5px;
     margin: 0 2px;
@@ -178,7 +193,7 @@ button:hover {
 }
 
 #custom-weather.default {
-    color: #000000;
+    color: #24283b;
     background-color: #9ece6a;
     padding: 0 5px;
     margin: 0 2px;
@@ -189,7 +204,7 @@ button:hover {
 #custom-notifications {
     margin: 0 2px;
     padding: 0 0 0 1px;
-    color: #000000;
+    color: #24283b;
     background-color: #bb9af7;
     min-width: 20px;
     background: rgb(42,195,222);
@@ -197,21 +212,21 @@ button:hover {
 }
 
 #battery.charging, #battery.plugged {
-    color: #000000;
+    color: #24283b;
     background-color: #bb9af7;
     padding: 0 5px;
 }
 
 @keyframes blink {
     to {
-        background-color: #000000;
-        color: #000000;
+        background-color: #24283b;
+        color: #24283b;
     }
 }
 
 #battery.critical:not(.charging) {
     background-color: #9ece6a;
-    color: #000000;
+    color: #24283b;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
@@ -220,12 +235,12 @@ button:hover {
 }
 
 label:focus {
-    background-color: #000000;
+    background-color: #24283b;
 }
 
 #cpu {
     background-color: #e0af68;
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
     background: rgb(42,195,222);
     background: linear-gradient(135deg, rgba(42,195,222,1) 0%, rgba(187,154,247,1) 100%); 
@@ -233,7 +248,7 @@ label:focus {
 
 #memory {
     background-color: #2ac3de;
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
     background: rgb(158,206,106);
     background: linear-gradient(135deg, rgba(158,206,106,1) 0%, rgba(42,195,222,1) 100%);
@@ -241,13 +256,13 @@ label:focus {
 
 #backlight {
     background-color: #f7768e;
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
 }
 
-#custom-network_traffic {
+#network {
     background-color: #bb9af7;
-    color: #000000;
+    color: #24283b;
     padding: 0 2px;
     margin: 0 2px;
     background: rgb(187,154,247);
@@ -256,12 +271,12 @@ label:focus {
 
 #network.disconnected {
     background-color: #f7768e;
-    color: #000000;
+    color: #24283b;
 }
 
 #pulseaudio {
     background-color: #2ac3de;
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
     margin: 0 2px;
     background: rgb(247,118,142);
@@ -270,13 +285,13 @@ label:focus {
 
 #pulseaudio.muted {
     background-color: #73daca;
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
 }
 
 #temperature {
     background-color: #73daca;
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
     background: rgb(247,118,142);
     background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
@@ -284,12 +299,12 @@ label:focus {
 
 #temperature.critical {
     background-color: #9ece6a;
-    color: #000000;
+    color: #24283b;
 }
 
 #tray {
     background-color: #2980b9;
-    color: #000000;
+    color: #24283b;
     padding: 0 5px;
     background: rgb(247,118,142);
     background: linear-gradient(135deg, rgba(247,118,142,1) 0%, rgba(187,154,247,1) 100%);
@@ -306,7 +321,7 @@ label:focus {
 
 #language {
     background: #bb9af7;
-    color: #000000;
+    color: #24283b;
     min-width: 20px;
     padding: 0 5px;
     margin: 0 2px;
@@ -316,7 +331,7 @@ label:focus {
 
 #keyboard-state {
     background: #e0af68;
-    color: #000000;
+    color: #24283b;
     padding: 0 0px;
     margin: 0 2px;
     min-width: 16px;
