--- a/swaync/style.css
+++ b/swaync/style.css
@@ -1,4 +1,4 @@
-@define-color cc-bg rgba(0, 0, 0, 1);
+@define-color cc-bg rgba(0, 0, 0, 0.5);
 @define-color noti-border-color rgba(255, 255, 255, 0.15);
 @define-color noti-bg rgb(17, 17, 27);
 @define-color noti-bg-darker rgb(43, 43, 57);
@@ -31,7 +31,7 @@
     border-radius: 12px;
     margin: 10px;
     padding: 0;
-    border: 2px solid #7aa2f7
+    border: 2px solid #2ac3de
 }
 
 .notification-content {
@@ -143,8 +143,8 @@
     font-size: 16px;
     font-weight: 700;
     background: transparent;
-    color: rgba(158, 206, 106, 1);
-    text-shadow: none
+    color: rgba(187, 154, 247, 1);
+    text-shadow: none;
 }
 
 .time {
@@ -166,7 +166,7 @@
 
 .control-center {
     background: @cc-bg;
-    border: 1px solid #7aa2f7;
+    border: 1px solid #2ac3de;
     border-radius: 10px;
 }
 
