multiple changes and updates

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
     border-radius: 20px;
-    font-family: FontAwesome;
+    font-family: JetBrainsMonoNL;
     font-size: 13px;
 }
 
