--- a/swaync/style.css
+++ b/swaync/style.css
@@ -11,7 +11,7 @@
 @define-color bg-selected rgb(0, 128, 255);
 
 * {
-    font-family: JetBrainsMono Nerd Font Propo;
+    font-family: JetBrainsMono NF;
     font-weight: bolder;
 }
 
